# goit-pythonweb-hw-06

./: Dockerfile  README.md  init-db.sh  pyproject.toml
app/: connect.py  models.py  my_select.py  seed.py
migrations/: env.py
migrations/versions/: 7df32ee885d5_init.py
