[tool.poetry]
name = "goit-pythonweb-hw-06"
version = "0.1.0"
description = "Fullstack Web Development with Python - Homework 6"
authors = ["Mykola Podopryhora <m.podopryhora@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
faker = "^33.0.0"
